mullvad-update/src/version/snapshots/mullvad_update__version__test__rollout_display.snap
---
source: mullvad-update/src/version/mod.rs
expression: "&string_reprs"
---
-0 => -0
0 => 0
0.00000011920929 => 0.00000011920929
0.33333334 => 0.33333334
0.9999999 => 0.9999999
1 => 1
