mullvad-update/src/version/snapshots/mullvad_update__version__test__rollout_threshold_uniqueness-2.snap
---
source: mullvad-update/src/version/mod.rs
expression: "Rollout::threshold(seed, v20255)"
---
0.68220514
