mullvad-update/src/version/snapshots/mullvad_update__version__test__rollout_threshold_uniqueness.snap
---
source: mullvad-update/src/version/mod.rs
expression: "Rollout::threshold(seed, v20254)"
---
0.98061204
