mullvad-update/src/version/snapshots/mullvad_update__version__test__version_unsupported_filtering-2.snap
---
source: mullvad-update/src/version/mod.rs
expression: info
---
stable:
  version: "2030.3"
  urls:
    - "https://releases.mullvad.net/desktop/releases/2025.3-beta1/MullvadVPN-2025.3-beta1_x64.exe"
  size: 106297504
  changelog: "[macos] Everything has been fixed"
  sha256:
    - 12
    - 86
    - 154
    - 160
    - 145
    - 46
    - 185
    - 54
    - 5
    - 168
    - 80
    - 115
    - 68
    - 125
    - 66
    - 186
    - 12
    - 166
    - 18
    - 54
    - 27
    - 239
    - 120
    - 239
    - 4
    - 239
    - 3
    - 142
    - 128
    - 177
    - 84
    - 3
beta: ~
