mullvad-update/src/version/snapshots/mullvad_update__version__test__version_unsupported_filtering.snap
---
source: mullvad-update/src/version/mod.rs
expression: info
---
stable:
  version: "2026.10"
  urls: []
  size: 0
  sha256:
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
  changelog: ""
beta: ~
